fixed font sizes on smaller screens

--- a/resources/styles/aboutme.css
+++ b/resources/styles/aboutme.css
@@ -55,3 +55,7 @@
     width: 70%
   }
 }
+
+p {
+  font-size: clamp(.2rem, 1.2rem, 1.5rem);
+}
