--- a/resources/styles/universal.css
+++ b/resources/styles/universal.css
@@ -24,7 +24,7 @@ html {
   margin: 0;
   padding: 0;
   width: 100%;
-  font-size: 1.2rem;
+  font-size: clamp(.2rem, 1.2rem, 1.5rem);
   color: var(--clr-light);
 }
 
@@ -232,6 +232,6 @@ footer {
   margin: 5em 0 2em;
   padding: 0 10%;
   text-align: center;
-  font-size: 20px;
+  font-size: clamp(.2rem, 1.2rem, 1.5rem);
 }
 
